# skillbox_oop

./: CMakeLists.txt  Car.cpp  Car.h  Lorry.cpp  Lorry.h  README.md  main.cpp
